Deflake files app tests covering launching with volumes unmounted.

Starting with volumes mounted and then unmounting them sometimes causes
an uncaught exception while resolving the My Drive root. Avoid this by
adding an option for files app tests to start without any volumes
mounted and update the tests to add volumes as needed.

Bug: 918808
Change-Id: I3f6fc59d097750d7b3d10c9ed227ff3a71ec2f17
Reviewed-on: https://chromium-review.googlesource.com/c/1404541
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Noel Gordon <noel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621490}
Former-commit-id: 5a4a120922072e3e91cde73bad8c6d17565583c5