chrome/browser/chromeos/file_manager/file_manager_browsertest_base.h
@@ -54,6 +54,7 @@ class FileManagerBrowserTestBase : public extensions::ExtensionApiTest {
   virtual bool GetRequiresStartupBrowser() const;
   virtual bool GetNeedsZipSupport() const;
   virtual bool GetIsOffline() const;
+  virtual bool GetStartWithNoVolumesMounted() const;
 
   // Launches the test extension from GetTestExtensionManifestName() and uses
   // it to drive the testing the actual FileManager component extension under
@@ -81,6 +82,10 @@ class FileManagerBrowserTestBase : public extensions::ExtensionApiTest {
 
   // Returns true if Drive should act as if offline.
   bool IsOfflineTest() const { return GetIsOffline(); }
+
+  bool DoesTestStartWithNoVolumesMounted() const {
+    return GetStartWithNoVolumesMounted();
+  }
 
   // Launches the test extension with manifest |manifest_name|. The extension
   // manifest_name file should reside in the specified |path| relative to the
